use static library on Solaris and OpenBSD, use object libraries elsewhere (LTO using object libs is broken on openbsd, and LTO using studio or GCC does not seem to work as intended, and somehow pulls in all the networking code that we don't even use yet, if at all)

--- a/src/crypto/README
+++ b/src/crypto/README
@@ -1,2 +1,7 @@
 The whole mbedTLS distribution is imported here, but will eventually be pruned as we identify unused algorithms.
+The Windows build, using GCC 8.3 with LTO and function-level linking enabled (-f*-sections, -Wl,--gc-sections),
+actually strips out all of the unused code - not even Winsock is linked into the final image after the LTO pass.
+
+Other platforms do not seem to be nearly as aggressive - GCC 9.2 on Solaris 11 still manages to pull in libsocket
+and the resolver library libnsl.
 -rick
